--- a/static/styles/generate.css
+++ b/static/styles/generate.css
@@ -27,6 +27,13 @@ html{
     }
 }
 
+.sharepic {
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    display: block;
+}
+
 .container{
     width: 100%;
     height: 100%;
@@ -48,6 +55,10 @@ html{
     position: relative;
 
 }
+.content {
+    position: relative;
+}
+
 .content img{
     position: absolute;
     width: 100%;
@@ -65,16 +76,27 @@ html{
     text-align: center;
     margin: auto;
     padding-top: 30%;
-    transform:rotate(-6deg);
-    transform: translateX(4%);
 }
 .content .message h3{
     line-height: 1.5;
     font-size: .14rem;
     font-weight: 400;
-
+    transform: rotate(-4deg) translateX(10px);
+}
+.content .message p{
+    font-size: .14rem;
+    transform: rotate(-4deg) translateX(10px);
 }
 
+/*二维码图标*/
+.container .erweima{
+    position: absolute;
+    left:1%;
+    bottom:1%;
+    width: .8rem;
+    height: .8rem;
+
+}
 /*重新生成按钮*/
 
 .container .regenerate{
